--- a/feign-client-sdk-impl/pom.xml
+++ b/feign-client-sdk-impl/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>feign-rest-client</artifactId>
+    <artifactId>feign-client-sdk-impl</artifactId>
     <version>1.4.4</version>
     <dependencies>
 
