--- a/feign-client-source/pom.xml
+++ b/feign-client-source/pom.xml
@@ -79,6 +79,27 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>junit</groupId>-->
+            <!--<artifactId>junit-dep</artifactId>-->
+            <!--<version>4.10</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
